--- a/场景一/index.css
+++ b/场景一/index.css
@@ -28,21 +28,73 @@ html,body{
 }
 .slide .a8 img{
     z-index: 1111;
-    width: 300px;
-    height: 300px;
+    width: 45%;
+    height: 30%;
     border-radius: 50%;
     position: absolute;
     left: 28%;
     top: 25%;
+
+
+
 }
 .slide .a8 p{
-    /*z-index: 1111;*/
     color: red;
     font-size: 30px;
     position: absolute;
-    left: 40%;
+    left: -140%;
     top: 65%;
 }
+
+.slide .a8 p.move {
+    -webkit-animation-name: myMove;
+    animation-name: myMove;
+
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+
+    /*-webkit-animation: myMove 1s linear; /!*infinite*!/*/
+    /*animation: myMove 1s linear;*/
+
+    /*当动画模拟完成后让当前元素的位置停留在最后一帧的位置*/
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes myMove {
+    25% {
+        left: -75%;
+    }
+    50%{
+        left: 0;
+    }
+    75% {
+        left: 75%;
+    }
+    100%{
+        left: 35%;
+    }
+}
+
+@keyframes myMove {
+    25% {
+        left: -75%;
+    }
+    50%{
+        left: 0;
+    }
+    75% {
+        left: 75%;
+    }
+    100%{
+        left: 35%;
+    }
+}
+
+
 .slide li:nth-child(1){
     background: url(images/1.png) no-repeat;
 }
@@ -59,7 +111,7 @@ html,body{
      background: url(images/12.png) no-repeat;
  }
 .slide li:nth-child(5){
-    background: url(images/16.png) no-repeat;
+    background: url(images/b.png) no-repeat;
 }
 .zIndex{
     z-index: 111;
@@ -75,6 +127,7 @@ html,body{
 }
 .a1 p{
 margin-top: 3%;
+
 }
 .a1 p:nth-child(odd){
     -webkit-transform: translate(-500px,0);
@@ -97,24 +150,6 @@ margin-top: 3%;
     margin-left: -45px;
     -webkit-transform: rotate(0deg);
 }
-/*.a2 p:nth-child(1){*/
-    /*background: url(images/c1.png) no-repeat;*/
-/*}*/
-/*.a2 p:nth-child(2){*/
-    /*background: url(images/c2.png) no-repeat;*/
-/*}*/
-/*.a2 p:nth-child(3){*/
-    /*background: url(images/c3.png) no-repeat;*/
-/*}*/
-/*.a2 p:nth-child(4){*/
-    /*background: url(images/c4.png) no-repeat;*/
-/*}*/
-/*.a2 p:nth-child(5){*/
-    /*background: url(images/c5.png) no-repeat;*/
-/*}*/
-/*.a2 p:nth-child(6){*/
-    /*background: url(images/c6.png) no-repeat;*/
-/*}*/
 #a2 p:nth-child(1) {
     left: 50%;
     top: 30%;
@@ -146,18 +181,18 @@ margin-top: 3%;
 .a3{
     width: 460px;
     height: 220px;
-    /*background: url(images/d1.png) no-repeat center;*/
     position: absolute;
     left:50%;
     margin-left: -230px;
     bottom:20%;
     font-size: 25px;
-    color:black;
+    color:#000;
 }
 
 #a3{
     -webkit-transform: rotateY(720deg);
     -webkit-transition:1s;
+
 }
 .a4 p{
     box-shadow: 1px 1px 10px rgba(255,255,255,0.8);
@@ -171,7 +206,7 @@ margin-top: 3%;
     font-size: 25px;
 }
 .a4 p:nth-child(1){
-    left: 20%;
+    left: 25%;
     top: 40%;
 }
 .a4 p:nth-child(2){
@@ -182,29 +217,27 @@ margin-top: 3%;
     left: 58%;
     top: 62%;
 }
-
+.a4 p:nth-child(4){
+    left: 40%;
+    top: 75%;
+}
 #a4 p{
-    width: 100px;
-    height: 80px;
+    width: 140px;
+    height: 60px;
+    text-align: left;
     -webkit-transition: 1s;
 }
-#a4 p:nth-child(3){
-    width: 150px;
-    height: 80px;
-}
-
-
-
-
-
-
+/*#a4 p:nth-child(3){*/
+    /*width: 150px;*/
+    /*height: 80px;*/
+/*}*/
 
 .a5 p{
     position: absolute;
     width: 290px;
     height: 90px;
     left:50%;
-    top:50%;
+    top:70%;
     margin-top: -45px;
     margin-left: -45px;
     -webkit-transform: rotate(0deg);
@@ -219,7 +252,7 @@ margin-top: 3%;
     top: 30%;
 }
 #a5 p:nth-child(2) {
-    left: 20%;
+    left: 53%;
     top: 45%;
 }
 #a5 p:nth-child(3){
@@ -229,14 +262,6 @@ margin-top: 3%;
 #a5 p:nth-child(4){
     left: 25%;
     top: 65%;
-}
-#a5 p:nth-child(5){
-    left: 80%;
-    top: 60%;
-}
-#a5 p:nth-child(6){
-    left: 50%;
-    top: 70%;
 }
 #a5 p{
     -webkit-transform: rotate(360deg);
